<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/laranja_fundo"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSenha"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:errorTextColor="#3a3a3a"
        android:textColorHint="#3a3a3a"
        app:boxBackgroundColor="@color/laranja_fundo"
        app:boxStrokeColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEntradaSenha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/raleway_light"
            android:hint="Senha"
            android:inputType="textPassword"
            android:textColor="#3a3a3a"
            android:textColorHint="#3a3a3a" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:errorTextColor="#3a3a3a"
        android:textColorHint="#3a3a3a"
        app:boxBackgroundColor="@color/laranja_fundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEntradaEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_light"
            android:hint="E-mail"
            android:textColor="#3a3a3a"
            android:textColorHint="#3a3a3a"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonEntrada"
        style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/raleway_light"
        android:gravity="center"
        android:onClick="validarLoginUsuario"
        android:text="Entrar"
        android:textColor="#3c2a12"
        android:textSize="18sp"
        app:backgroundTint="@color/laranja_fundo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoUsuario"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/raleway_light"
        android:text="Você é:"
        android:textSize="18sp"
        android:textColor="#3a3a3a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputSenha" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/tipoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:buttonTint="@color/laranja_fundo"
        android:textOff="Paciente"
        android:textOn="Médico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/raleway_light"
        android:text="Paciente"
        android:textColor="#3a3a3a"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tipoUsuario"
        app:layout_constraintEnd_toStartOf="@+id/tipoUsuario"
        app:layout_constraintTop_toTopOf="@+id/tipoUsuario" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/raleway_light"
        android:text="Médico"
        android:textColor="#3a3a3a"
        app:layout_constraintBottom_toBottomOf="@+id/tipoUsuario"
        app:layout_constraintStart_toEndOf="@+id/tipoUsuario"
        app:layout_constraintTop_toTopOf="@+id/tipoUsuario" />

</androidx.constraintlayout.widget.ConstraintLayout>