...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/laranja_fundo"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/buttonEntrar"
        style="@style/FirebaseUI.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="376dp"
        android:background="@color/laranja_fundo"
        android:fontFamily="@font/raleway_light"
...
